fix slightly weird tooltip spacing thing

--- a/views/partials/helperscripts.handlebars
+++ b/views/partials/helperscripts.handlebars
@@ -85,8 +85,7 @@ function attachQuill(element){
     var quill = new Quill(element, {
         modules: {
             toolbar: [
-            ['bold', 'italic', { 'list': 'bullet' }, 'link'],
-            ['blockquote']
+            ['bold', 'italic', { 'list': 'bullet' }, 'link', 'blockquote'],
             ]
         },
         placeholder: 'Write something, highlight text to format.',
