--- a/views/partials/helperscripts.handlebars
+++ b/views/partials/helperscripts.handlebars
@@ -90,6 +90,9 @@ function attachQuill(element){
             quill.insertText(0,emojiString)
         }
     }
+    element.hasContent = function(){
+        return $(element).text().trim().length !== 0;
+    }
 }
 
 $(function() {
@@ -138,12 +141,6 @@ $(function() {
 
     // Attach scripts to newly loaded posts
     $('#postsContainer').on('append.infiniteScroll', function (event, response, path, items) {
-        {{#if loggedIn}}
-        
-        if (typeof tribute !== 'undefined') { // Silently fails to load tribute if API has not yet responded, it will be attached to these comment fields when tribute does load (look up a few lines)
-            tribute.attach($(".ql-editor"));
-        }
-        {{/if}}
         var newlyLoadedStuff = $(items);
         if (newlyLoadedStuff.find('.post-images').length > 0) {
             var imagesLoaded = newlyLoadedStuff.find('.post-single-image').length;
@@ -186,17 +183,25 @@ $(function() {
                 //$.post("/admin/clientsideerrors",{errortext: "not all images lightboxed: "+imagesLoaded+" loaded, "+imagesLightboxed+" lightboxed"})
             }
         }
-
+        {{#if loggedIn}}
         var commentForms = newlyLoadedStuff.find('.editable-text');
         commentForms.each(function(){
             attachQuill(this);
         })
+        if (typeof tribute !== 'undefined') { // Silently fails to load tribute if API has not yet responded, it will be attached to these comment fields when tribute does load (look up a few lines)
+            console.log(newlyLoadedStuff.find(".ql-editor"))
+            tribute.attach(newlyLoadedStuff.find(".ql-editor"));
+        }
+        {{/if}}
     });
 
     
     {{#if loggedIn}}
 
-    attachQuill(document.getElementById('editor'))
+    var editor = undefined;
+    if(editor = document.getElementById('editor')){
+        attachQuill(editor)
+    }
 
     {{/if}}
 });
