--- a/views/communities.handlebars
+++ b/views/communities.handlebars
@@ -49,11 +49,13 @@
           </div>
           <div class="form-group">
             <label for="communityDescription">Description</label>
-            <textarea class="form-control" id="communityDescription" name="communityDescription" rows="3" required>{{sessionFlash.newCommunityData.communityDescription}}</textarea>
+            <div class="form-control" style="height:auto;" id="communityDescriptionHtml">{{sessionFlash.newCommunityData.communityDescription}}</div>
+            <input type="hidden" name="communityDescription" id="communityDescription">
           </div>
           <div class="form-group">
             <label for="communityRules">Rules</label>
-            <textarea class="form-control" id="communityRules" name="communityRules" rows="3" required>{{#if  sessionFlash.newCommunityData.communityRules}}{{sessionFlash.newCommunityData.communityRules}}{{else}}Please follow the guidelines laid out in the Community Covenant, available to read here: https://community-covenant.net/version/1/0/{{/if}}</textarea>
+            <div class="form-control" style="height:auto;" id="communityRulesHtml">{{#if  sessionFlash.newCommunityData.communityRules}}{{sessionFlash.newCommunityData.communityRules}}{{else}}Please follow the guidelines laid out in the Community Covenant, available to read here: https://community-covenant.net/version/1/0/{{/if}}</div>
+            <input type="hidden" name="communityRules" id="communityRules">
           </div>
           <div class="form-group">
             <label for="communityVisibility">Post visibility</label>
@@ -88,7 +90,7 @@
               <input type="file" name="imageUpload" id="image-upload" accept="image/*" />
             </div>
           </div>
-          <button type="submit" class="btn btn-primary">Create</button>
+          <button id="createCommunity" type="submit" class="btn btn-primary">Create</button>
         </form>
       </div>
       <div class="tab-pane fade show active" id="directory" role="tabpanel" aria-labelledby="directoryTab">
@@ -112,6 +114,16 @@
 {{> filemessage }}
 
 <script type="text/javascript">
+
+attachQuill(document.getElementById("communityDescriptionHtml"));
+attachQuill(document.getElementById("communityRulesHtml"));
+
+$("#newCommunityForm").submit(function(e){
+  $("#communityRules").val($("#communityRulesHtml").find(".ql-editor").html());
+  $("#communityDescription").val($("#communityDescriptionHtml").find(".ql-editor").html());
+  return true;
+})
+
 
   $('a[data-toggle="tab"]').on('shown.bs.tab', function (e) {
     console.log(e.target) // newly activated tab
