remove unsupported formatting from stuff pasted into editor

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1030,6 +1030,10 @@ hr {
   margin-bottom: 0.5em;
 }
 
+.ql-editor ul {
+  margin-bottom: 0.5em;
+}
+
 #postContentWarningsContainer {
   display: none;
 }
