make emoji window button give focus to reply form after click

--- a/views/partials/scripts.handlebars
+++ b/views/partials/scripts.handlebars
@@ -162,7 +162,10 @@ $(function() {
         text == "Show more" ? "Show less" : "Show more");
   })
   $('body').on('click','.replyEmojiWindowButton', function() {
-    $(this).closest('.new-comment-form').find('.replyEmojiWindow').slideToggle("fast");
+    var commentFormContainer = $(this).closest('.new-comment-form');
+    commentFormContainer.find('.replyEmojiWindow').slideToggle("fast");
+    commentFormContainer.find('.ql-editor').focus();
+
   })
   $('body').on('click','.replyEmojiWindow>.add-emoji', function() {
     $(this).closest(".new-comment-form").find('.ql-container')[0].insertEmojiAtCursor(event.target.innerHTML);
