--- a/views/partials/scripts.handlebars
+++ b/views/partials/scripts.handlebars
@@ -90,17 +90,13 @@ $(function() {
     var searchQuery = $('#navbarSearchField').val();
     window.location.href = '/search/' +	searchQuery
   });
-
-
-  // window.onbeforeunload = function() {
-  //     return true;
-  // };
-
+  
   // Reload notifications container and check for new posts every minute (hack until we set up WebSockets)
+  var pageloadtime = new Date();
   window.setInterval(function(){
     $("#notificationsContainer").load("/api/notification/display");
     {{#eq activePage "home"}}
-    $("#checkNewPosts").load("/showposts/home/{{loggedInUserData._id}}/1", function(error, result){
+    $("#checkNewPosts").load("/showposts/home/{{loggedInUserData._id}}/"+pageloadtime.getTime(), function(error, result){
       let latestPost = $("#checkNewPosts").find(".post").attr("data-post-id");
       let currentlyDisplayedPost = $("#postsContainer").find(".post").attr("data-post-id");
       if ((latestPost != currentlyDisplayedPost) && latestPost != ""){
