--- a/views/partials/helperscripts.handlebars
+++ b/views/partials/helperscripts.handlebars
@@ -124,6 +124,10 @@ function attachQuill(element,placeholder){
     }
 }
 
+//this is used to keep track of the oldest post currently loaded in the feed; when the infinite scroll script fetches the next page of posts,
+//it should start with posts just older than that. it starts out with the current time as a placeholder (obvs we only have posts older than the current time.)
+lastpostloadedtime = new Date().getTime();
+
 $(function() {
     //this is here bc this is the first of our scripts to be linked in in the layout, and this should be the first thing the browser does
     window.onerror = function(errorMessage, source, lineno, colno, error){
@@ -167,10 +171,14 @@ $(function() {
     });
 
 {{/if}}
-
     // Attach scripts to newly loaded posts
     $('#postsContainer').on('append.infiniteScroll', function (event, response, path, items) {
         var newlyLoadedStuff = $(items);
+
+        lastpostloadedtime = newlyLoadedStuff.last().find("#lastposttimestamp").html(); //the new oldest-post-loaded timestamp is provided by the server in this element
+        console.log(lastpostloadedtime)
+        console.log(newlyLoadedStuff.last())
+
         if (newlyLoadedStuff.find('.post-images').length > 0) {
             var imagesLoaded = newlyLoadedStuff.find('.post-single-image').length;
             console.log("images loaded: " + imagesLoaded);
