--- a/views/partials/posts_v2.handlebars
+++ b/views/partials/posts_v2.handlebars
@@ -162,6 +162,9 @@
             {{/if}}
         </section>
     {{/unless}}
+    {{#if @last}}
+    <div id="lastposttimestamp" style="display:none;">{{../lastposttimestamp}}</div>
+    {{/if}}
 </article>
 {{/if}}
 {{/each}}
