--- a/views/user.handlebars
+++ b/views/user.handlebars
@@ -90,8 +90,7 @@
 <script>
 $('#postsContainer').infiniteScroll({
   path: function() {
-    var pageNumber = ( this.loadCount + 1 );
-    return '/showposts/user/{{profileData._id}}/' + pageNumber;
+    return '/showposts/user/{{profileData._id}}/' + lastpostloadedtime;
   },
   append: '.post',
   prefill: true,
