--- a/views/partials/searchresults.handlebars
+++ b/views/partials/searchresults.handlebars
@@ -26,6 +26,9 @@
         </p>
       </div>
     </div>
+    {{#if @last}}
+      <div id="oldesttimestamp" style="display:none;">{{../oldesttimestamp}}</div>
+    {{/if}}
   </div>
   {{/each}}
 {{/if}}
